Fix Style - List travels image distortion

--- a/src/components/Profil/style.scss
+++ b/src/components/Profil/style.scss
@@ -93,6 +93,7 @@
   margin: 1.5em auto;
   flex-wrap: wrap; 
   justify-content: center;
+  align-items: center;
   border: solid 0.2em white;
     padding: 1.5em;
     border-radius: 0.5em;
